--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-openai
+openai==0.28
 python-dotenv
 pandas
 PyMuPDF
@@ -7,4 +7,5 @@ pytesseract
 python-docx
 pillow
 pdfplumber
+
 python-dotenv
